deployment/ingresses/catch-all-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catch-all-ingress
#  annotations:
#    kubernetes.io/ingress.regional-static-ip-name: "front-armor"
spec:
  defaultBackend:
    service:
      name: traefik
      port:
        number: 80
