deployment/ingresses/prod.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "traefik"
  name: frontend
spec:
  rules:
    - host: front.34.79.214.117.nip.io
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
          - backend:
              service:
                name: api
                port:
                  number: 8080
            path: /api
            pathType: Prefix
